crates/tui/tests/storybook/snapshots/buffer::table_selection_masks_chrome_and_padding.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
┏━━━┳━━━┓
┃ A ┃ B ┃
┣━━━╋━━━┫
┃ 1 ┃ 2 ┃
┗━━━┻━━━┛
