crates/tui/tests/storybook/snapshots/chrome::border_bottom_only_no_corners.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
..................
.content     .....
.            .....
.────────────.....
..................
