crates/tui/tests/storybook/snapshots/chrome::border_double_with_title.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
..................
.╔dbl═══════╗.....
.║content   ║.....
.╚══════════╝.....
..................
