crates/tui/tests/storybook/snapshots/chrome::border_left_and_right_only.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
..................
.│content   │.....
.│          │.....
.│          │.....
..................
