crates/tui/tests/storybook/snapshots/chrome::border_none_omits_frame.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
..................
.              ...
.              ...
..................
..................
