crates/tui/tests/storybook/snapshots/chrome::border_rounded_with_title.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
..................
.╭rnd─────────╮...
.╰────────────╯...
..................
..................
