crates/tui/tests/storybook/snapshots/chrome::border_single_no_title.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
..................
.┌────────────┐...
.└────────────┘...
..................
..................
