crates/tui/tests/storybook/snapshots/chrome::border_top_left_corner_only.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
..................
.┌───────────.....
.│content    .....
.│           .....
..................
